@@ -6,7 +6,6 @@ GObject
     GdkPixmap
   GdkColormap
   GtkSettings
-  GtkRcStyle
   GtkObject
     GtkWidget
       GtkMisc
