@@ -1695,10 +1695,12 @@ _gtk_boolean_handled_accumulator (GSignalInvocationHint *ihint,
 				  const GValue          *handler_return,
 				  gpointer               dummy)
 {
-  gboolean val;
-
-  val = g_value_get_boolean (handler_return);
-  g_value_set_boolean (return_accu, val);
+  gboolean continue_emission;
+  gboolean signal_handled;
   
-  return !val;
+  signal_handled = g_value_get_boolean (handler_return);
+  g_value_set_boolean (return_accu, signal_handled);
+  continue_emission = !signal_handled;
+  
+  return continue_emission;
 }
